[package]
name = "speculum2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.27"
clap = { version = "4.4.1", features = ["derive"] }
regex = "1.9.4"
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
log = { version = "0.4.22", features = [] }
futures = "0.3.30"
env_logger = "0.11.5"
